raporty, poprawione widoki, req

--- a/budget/budget_app/templates/base.html
+++ b/budget/budget_app/templates/base.html
@@ -63,6 +63,7 @@
                     <li><a href="{% url 'logout' %}" class="btn">Wyloguj</a></li>
                     <li><a href="{% url 'charts' %}" class="btn">Wykresy</a></li>
                     <li><a href="{% url 'categories' %}" class="btn">Kategorie</a></li>
+                    <li><a href="{% url 'report' %}" class="btn">Raporty</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}" class="btn">Zaloguj</a></li>
                     <li><a href="{% url 'register' %}" class="btn">Załóż konto</a></li>
