--- a/budget/budget_app/templates/incomes_partial.html
+++ b/budget/budget_app/templates/incomes_partial.html
@@ -29,7 +29,73 @@ Plan Your Budget - Lista Dochodów
     {% endfor %}
 </ul>
 
+<section class="pie-chart-section">
+    <canvas id="incomePieChart" width="400" height="400"></canvas>
+</section>
+
 <div style="margin-top: 20px;">
     <button onclick="window.location.href='{% url 'incomes_list' %}'" class="btn">Wróć</button>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+    function updatePieChart() {
+        const incomeCategories = {};
+        const incomeAmountElements = document.querySelectorAll('.income-amount');
+
+        incomeAmountElements.forEach(incomeAmountElement => {
+            const category = incomeAmountElement.parentElement.querySelector('.income-category').textContent;
+            const amount = parseFloat(incomeAmountElement.textContent);
+
+            if (incomeCategories.hasOwnProperty(category)) {
+                incomeCategories[category] += amount;
+            } else {
+                incomeCategories[category] = amount;
+            }
+        });
+
+        const categoryLabels = Object.keys(incomeCategories);
+        const categoryAmounts = Object.values(incomeCategories);
+
+        if (document.getElementById('incomePieChart')) {
+            const ctx = document.getElementById('incomePieChart').getContext('2d');
+            const incomePieChart = new Chart(ctx, {
+                type: 'pie',
+                data: {
+                    labels: categoryLabels,
+                    datasets: [{
+                        data: categoryAmounts,
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.5)',
+                            'rgba(54, 162, 235, 0.5)',
+                            'rgba(255, 206, 86, 0.5)',
+                            'rgba(75, 192, 192, 0.5)',
+                            'rgba(153, 102, 255, 0.5)',
+                            'rgba(255, 159, 64, 0.5)',
+                            'rgba(255, 99, 132, 0.5)'
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)',
+                            'rgba(255, 99, 132, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false
+                }
+            });
+        }
+    }
+
+    updatePieChart();
+});
+</script>
 {% endblock %}
