--- a/budget/budget_app/templates/base.html
+++ b/budget/budget_app/templates/base.html
@@ -60,10 +60,11 @@
         <nav>
             <ul>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout' %}" class="btn">Wyloguj</a></li>
                     <li><a href="{% url 'charts' %}" class="btn">Wykresy</a></li>
                     <li><a href="{% url 'categories' %}" class="btn">Kategorie</a></li>
                     <li><a href="{% url 'report' %}" class="btn">Raporty</a></li>
+                    <li><a href="{% url 'atms' %}" class="btn">Bankomaty</a></li>
+                    <li><a href="{% url 'logout' %}" class="btn">Wyloguj</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}" class="btn">Zaloguj</a></li>
                     <li><a href="{% url 'register' %}" class="btn">Załóż konto</a></li>
