--- a/budget/budget_app/templates/charts.html
+++ b/budget/budget_app/templates/charts.html
@@ -25,13 +25,13 @@ document.addEventListener('DOMContentLoaded', function () {
 
     // Dane do wykresu
     const labels = ['Styczeń', 'Luty', 'Marzec', 'Kwiecień', 'Maj', 'Czerwiec', 'Lipiec', 'Sierpień', 'Wrzesień', 'Październik', 'Listopad', 'Grudzień'];
-    const incomeData = monthlyData.map(data => data.income);
-    const expenseData = monthlyData.map(data => data.expense);
-    const balanceData = monthlyData.map(data => data.balance);
+    let incomeData = monthlyData.map(data => data.income);
+    let expenseData = monthlyData.map(data => data.expense);
+    let balanceData = monthlyData.map(data => data.balance);
 
     // Konfiguracja wykresu
     const ctx = document.getElementById('budgetChart').getContext('2d');
-    const budgetChart = new Chart(ctx, {
+    let budgetChart = new Chart(ctx, {
         type: 'bar',
         data: {
             labels: labels,
@@ -71,7 +71,21 @@ document.addEventListener('DOMContentLoaded', function () {
     const yearSelect = document.getElementById('yearSelect');
     yearSelect.addEventListener('change', function() {
         const selectedYear = yearSelect.value;
+        // Załaduj dane dla wybranego roku
+        fetch(`/data?year=${selectedYear}`)
+            .then(response => response.json())
+            .then(data => {
+                incomeData = data.map(data => data.income);
+                expenseData = data.map(data => data.expense);
+                balanceData = data.map(data => data.balance);
+                // Zaktualizuj dane na wykresie
+                budgetChart.data.datasets[0].data = incomeData;
+                budgetChart.data.datasets[1].data = expenseData;
+                budgetChart.data.datasets[2].data = balanceData;
+                budgetChart.update();
+            });
     });
 });
+
 </script>
 {% endblock %}
