--- a/budget/budget_app/static/css/styles.css
+++ b/budget/budget_app/static/css/styles.css
@@ -1,3 +1,53 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+}
+
+.logo h1 a {
+    color: white;
+    text-decoration: none;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+main {
+    padding: 20px;
+}
+
+/* Dodane style dla stopki */
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+
 .btn {
     font-family: Roboto, sans-serif;
     font-weight: bold;
@@ -66,3 +116,80 @@
     color: #999999;
 }
 
+/* Dodane style dla summary */
+.summary {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.summary p {
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.summary .total {
+    font-weight: bold;
+    padding: 12px 35px;
+    border-radius: 50px;
+    display: inline-block;
+    transition: transform 0.5s, padding 0.5s;
+    cursor: pointer;
+}
+
+.summary .total:hover {
+    padding: 12px 50px;
+    transform: translateY(-2px);
+}
+
+.total-info {
+    font-size: 18px;
+    color: #555;
+    margin: 10px 0;
+}
+
+.balance-background {
+    background: linear-gradient(to right, #004d40, #00acc1);
+    padding: 10px 20px;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+    border: 2px solid #00695c;
+}
+
+.income-background {
+    background: linear-gradient(to right, #1b5e20, #b2dfdb);
+    padding: 5px 10px;
+    color: white;
+    font-weight: bold;
+    border: 2px solid #33691e;
+}
+
+.expense-background {
+    background: linear-gradient(to right, #b71c1c, #ffcdd2);
+    padding: 5px 10px;
+    color: white;
+    font-weight: bold;
+    border: 2px solid #8e0000;
+}
+
+.total-value {
+    vertical-align: middle;
+    display: inline-block;
+}
+
+/* Dodane style dla categories */
+.category-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.category-name {
+    margin-left: 40px;
+}
+
+.delete-form {
+    margin-left: 10px;
+}
