Postgres migration, documentation

--- a/budget/budget_app/templates/atms.html
+++ b/budget/budget_app/templates/atms.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Simple Marker</title>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=<API>>&callback=console.debug&libraries=maps,marker&v=beta">
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDX6pkUwIi_rxU1XLOPNnl98M6-AILwdF0&callback=console.debug&libraries=maps,marker&v=beta">
     </script>
     <style>
 
